--- a/ementor/src/App.css
+++ b/ementor/src/App.css
@@ -38,69 +38,31 @@ img {
   color: #bbb !important;
 }
 
-.App .MessageList {
-  box-sizing: border-box;
-  flex: 1;
+-container {
+  border-bottom-left-radius: 0.5em;
+  border-bottom-right-radius: 0.5em;
+  background: #fefcfc;
 }
 
-.App .MessageForm {
-  background: #eee;
-  border-top: 1px solid #ccc;
-  border-radius: 0 0 3px 3px;
-  box-sizing: border-box;
-  flex: 0 0 30px;
+.ql-toolbar.ql-snow + .ql-container.ql-snow {
+  border-top: 0px;
+  width: 400px;
 }
 
-.Message {
-  line-height: 1.5em;
+/* Snow Theme */
+.ql-snow.ql-toolbar {
+  display: block;
+  background: #eaecec;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  width: 400px;
 }
 
-.Message.log {
-  color: #bbb;
+.ql-editor {
+  min-height: 18em;
 }
 
-.Message .author {
-  font-weight: bold;
-  color: #888;
-  margin: 0 5px 0 0;
-}
-
-.Message.me .author {
-  color: #b6191e;
-}
-
-.MessageForm {
-  display: flex;
-  background: #ccc;
-}
-
-.MessageForm .input-container {
-  flex: 1;
-  margin: 1px;
-}
-
-.MessageForm .button-container {
-  flex: 0 0 6em;
-  margin: 1px 1px 1px 0;
-}
-
-.MessageForm input,
-.MessageForm button {
-  background: #fff;
-  border-radius: 3px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  font-size: inherit;
-  height: 100%;
-  outline: none;
-  width: 100%;
-}
-
-.MessageForm input {
-  padding: 0 0 0 4px;
-}
-
-.MessageList {
-  overflow-y: auto;
-  padding: 4px;
+.themeSwitcher {
+  margin-top: 0.5em;
+  font-size: small;
 }
