--- a/ementor/src/App.css
+++ b/ementor/src/App.css
@@ -66,3 +66,140 @@ img {
   margin-top: 0.5em;
   font-size: small;
 }
+
+.login-clean {
+  background: #f1f7fc;
+  padding: 80px 0;
+}
+
+.register {
+  background: #f1f7fc;
+  padding: 80px 0;
+}
+
+.register form {
+  max-width: 500px;
+  width: 90%;
+  margin: 0 auto;
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 4px;
+  color: #505e6c;
+  margin-top: 5%;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+}
+
+.login-clean form {
+  max-width: 320px;
+  width: 90%;
+  margin: 0 auto;
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 4px;
+  color: #505e6c;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+}
+
+.register .illustration {
+  text-align: center;
+  padding: 0 0 20px;
+  font-size: 100px;
+  color: rgb(244, 71, 107);
+}
+
+.login-clean .illustration {
+  text-align: center;
+  padding: 0 0 20px;
+  font-size: 100px;
+  color: rgb(244, 71, 107);
+}
+
+.login-clean form .form-control {
+  background: #f7f9fc;
+  border: none;
+  border-bottom: 1px solid #dfe7f1;
+  border-radius: 0;
+  box-shadow: none;
+  outline: none;
+  color: inherit;
+  text-indent: 8px;
+  height: 42px;
+}
+
+.login-clean form .btn-primary {
+  background: #f4476b;
+  border: none;
+  border-radius: 4px;
+  padding: 11px;
+  box-shadow: none;
+  margin-top: 26px;
+  text-shadow: none;
+  outline: none !important;
+}
+
+.login-clean form .btn-primary:hover,
+.login-clean form .btn-primary:active {
+  background: #eb3b60;
+}
+
+.login-clean form .btn-primary:active {
+  transform: translateY(1px);
+}
+
+.login-clean form .forgot {
+  display: block;
+  text-align: center;
+  font-size: 12px;
+  color: #6f7a85;
+  opacity: 0.9;
+  text-decoration: none;
+}
+
+.login-clean form .forgot:hover,
+.login-clean form .forgot:active {
+  opacity: 1;
+  text-decoration: none;
+}
+
+.fa-google {
+  background-color: white;
+  color: red;
+  border: 1px solid;
+  border-radius: 50%;
+  padding: 8px;
+  border-color: red;
+  margin-left: 100px;
+}
+
+.login-clean {
+  height: 100vh;
+}
+
+.register {
+  height: 100vh;
+}
+
+.videoRoom {
+  height: 100vh;
+}
+
+.btn .btn-info {
+  background-color: blue;
+}
+
+.bg-info {
+  background-color: blue;
+}
+
+.chatbox {
+  border: 2px solid;
+  padding-left: 50px;
+  width: 500px;
+  min-height: 500px;
+}
+
+.closebutton {
+  float: right;
+  margin-top: -88px;
+  padding-right: 47px;
+}
