--- a/ementor/src/App.css
+++ b/ementor/src/App.css
@@ -248,3 +248,19 @@ a:hover {
 a:active a:active {
   color: white;
 }
+
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
+
+.tablink:hover {
+  background-color: #777;
+}
